--- a/contact.html
+++ b/contact.html
@@ -503,7 +503,7 @@
                   <p>
                     POWERFUL CONSTRUCTION LLC © 2024, All rights reserved: Made
                     By
-                    <a href="flexboom.media">FlexBoom Media LLC </a>
+                    <a target="_blank" href="http://flexboom.media">FlexBoom Media LLC</a>
                   </p>
                 </div>
               </div>
