--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <div class="row">
                 <div class="col-md-12 col-lg-12">
                   <div class="slider__inner">
-                    <h4>SCIENCE 1953</h4>
+                    <h4>POWERFUL CONSTRUCTION LLC</h4>
                     <h1>WE BUILD THE TRUST</h1>
                     <p>
                       Transforming blueprints into reality, our construction
@@ -165,7 +165,7 @@
               <div class="row">
                 <div class="col-md-12 col-lg-12">
                   <div class="slider__inner">
-                    <h4>SCIENCE 1953</h4>
+                    <h4>POWERFUL CONSTRUCTION LLC</h4>
                     <h1>WE BUILD THE TRUST</h1>
                     <p>
                       Transforming blueprints into reality, our construction
@@ -1377,7 +1377,8 @@
                   <p>
                     POWERFUL CONSTRUCTION LLC © 2024, All rights reserved: Made
                     By
-                    <a href="flexboom.media">FlexBoom Media LLC </a>
+                    <a target="_blank" href="http://flexboom.media">FlexBoom Media LLC</a>
+
                   </p>
                 </div>
               </div>
