--- a/service.html
+++ b/service.html
@@ -120,7 +120,9 @@
                   <nav class="bradcaump-inner">
                     <a class="breadcrumb-item" href="index.html">POWERFUL</a>
                     <span class="brd-separetor">-</span>
-                    <span class="breadcrumb-item active">CONSTRUCTION - LLC</span>
+                    <span class="breadcrumb-item active"
+                      >CONSTRUCTION - LLC</span
+                    >
                   </nav>
                 </div>
               </div>
@@ -203,7 +205,11 @@
                 <div class="service foo">
                   <div class="service__thumb">
                     <a href="contact.html">
-                      <img src="images/service/q00.png" style="max-width: 250px;" alt="service images" />
+                      <img
+                        src="images/service/q00.png"
+                        style="max-width: 250px"
+                        alt="service images"
+                      />
                     </a>
                     <div class="service__hover">
                       <div class="service__action">
@@ -243,7 +249,8 @@
                   <div class="service__thumb">
                     <a href="contact.html">
                       <img
-                        src="images/service/q012.jpg" style="max-width: 250px;"
+                        src="images/service/q012.jpg"
+                        style="max-width: 250px"
                         alt="service images"
                       />
                     </a>
@@ -342,10 +349,7 @@
                 <div class="service foo">
                   <div class="service__thumb">
                     <a href="contact.html">
-                      <img
-                        src="images/service/q8.jpeg"
-                        alt="service images"
-                      />
+                      <img src="images/service/q8.jpeg" alt="service images" />
                     </a>
                     <div class="service__hover">
                       <div class="service__action">
@@ -441,8 +445,8 @@
                   <p>Get started on your project today—request a quote now!</p>
                 </div>
                 <form
-                action="https://formspree.io/f/xpzvrybl"
-                method="POST"
+                  action="https://formspree.io/f/xpzvrybl"
+                  method="POST"
                   enctype="multipart/form-data"
                 >
                   <label class="single__cl__form">
@@ -551,9 +555,7 @@
                     <i class="zmdi zmdi-pin"></i>
                   </div>
                   <div class="ht__address__details">
-                    <p>
-                      22 Corabelle Ave, <br />Lodi, NJ 07644 USA
-                    </p>
+                    <p>22 Corabelle Ave, <br />Lodi, NJ 07644 USA</p>
                   </div>
                 </div>
                 <!-- End Single Address -->
@@ -564,12 +566,15 @@
                   </div>
                   <div class="ht__address__details">
                     <p>
-                      <a href="mailto:powerfulconstruction10@gmail.com" class="cs-email">
+                      <a
+                        href="mailto:powerfulconstruction10@gmail.com"
+                        class="cs-email"
+                      >
                         <span class="fa fa-envelope"></span>
-                        Send us an email: <br> powerfulconstruction10@gmail.com
+                        Send us an email: <br />
+                        powerfulconstruction10@gmail.com
                       </a>
                     </p>
-                  
                   </div>
                 </div>
                 <!-- End Single Address -->
@@ -586,7 +591,8 @@
                     </p>
                     <p>
                       <a href="tel: +1 (201)903-5007" class="cs-phone"
-                        ><span class="fa fa-phone"></span> &nbsp; &nbsp; &nbsp; (201)903-5007
+                        ><span class="fa fa-phone"></span> &nbsp; &nbsp; &nbsp;
+                        (201)903-5007
                       </a>
                     </p>
                   </div>
@@ -595,148 +601,153 @@
               </div>
             </div>
           </div>
-        </div>    <footer class="htc__footer__area">
-        <div
-          class="footer__top ptb--130"
-          data--1f2d30__overlay="9.5"
-          style="
-            background: rgba(0, 0, 0, 0) url(images/bg/2.jpg) no-repeat fixed
-              center center / cover;
-          "
-        >
-          <div class="container">
-            <div class="row">
-              <div class="htc__footer__wrap clearfix">
-                <!-- Start Single Footer -->
-                <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
-                  <div class="footer">
-                    <div class="footer__widget">
-                      <h2 class="ft__title">ABOUT</h2>
-                    </div>
-                    <div class="ft__details">
-                      <p>
-                        From residential renovations to large-scale commercial
-                        developments, our team's expertise, attention to detail,
-                        and commitment to quality ensure your vision becomes a
-                        reality.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End Single Footer -->
-                <!-- Start Single Footer -->
-                <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 xmt-40">
-                  <div class="footer quick__link">
-                    <div class="footer__widget">
-                      <h2 class="ft__title">QUICK LINKS</h2>
-                    </div>
-                    <div class="footer__link">
-                      <ul class="ft__menu">
-                        <li><a href="service.html">Services</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">blog</a></li>
-                      </ul>
-                      <ul class="ft__menu">
-                        <li><a href="#">Quote</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="#">Features</a></li>
-                      </ul>
+        </div>
+        <footer class="htc__footer__area">
+          <div
+            class="footer__top ptb--130"
+            data--1f2d30__overlay="9.5"
+            style="
+              background: rgba(0, 0, 0, 0) url(images/bg/2.jpg) no-repeat fixed
+                center center / cover;
+            "
+          >
+            <div class="container">
+              <div class="row">
+                <div class="htc__footer__wrap clearfix">
+                  <!-- Start Single Footer -->
+                  <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
+                    <div class="footer">
+                      <div class="footer__widget">
+                        <h2 class="ft__title">ABOUT</h2>
+                      </div>
+                      <div class="ft__details">
+                        <p>
+                          From residential renovations to large-scale commercial
+                          developments, our team's expertise, attention to
+                          detail, and commitment to quality ensure your vision
+                          becomes a reality.
+                        </p>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <!-- End Single Footer -->
-                <!-- Start Single Footer -->
-                <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 smt-40 xmt-40">
-                  <div class="footer">
-                    <div class="footer__widget">
-                      <h2 class="ft__title">SERVICES</h2>
-                    </div>
-                    <ul class="footer__instagram">
-                      <li>
-                        <a href="#"
-                          ><img src="images/blog/sm-img/1.jpg" alt="images"
-                        /></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          ><img src="images/blog/sm-img/2.jpg" alt="images"
-                        /></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          ><img src="images/blog/sm-img/3.jpg" alt="images"
-                        /></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          ><img src="images/blog/sm-img/4.jpg" alt="images"
-                        /></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          ><img src="images/blog/sm-img/5.jpg" alt="images"
-                        /></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          ><img src="images/blog/sm-img/6.jpg" alt="images"
-                        /></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <!-- End Single Footer -->
-                <!-- Start Single Footer -->
-                <div
-                  class="col-md-3 col-lg-2 col-lg-offset-1 col-sm-6 col-xs-12 smt-40 xmt-40"
-                >
-                  <div class="footer">
-                    <div class="footer__widget">
-                      <h2 class="ft__title">INQUARY</h2>
+                  <!-- End Single Footer -->
+                  <!-- Start Single Footer -->
+                  <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 xmt-40">
+                    <div class="footer quick__link">
+                      <div class="footer__widget">
+                        <h2 class="ft__title">QUICK LINKS</h2>
+                      </div>
                       <div class="footer__link">
                         <ul class="ft__menu">
-                          <li><a href="#">Construction</a></li>
-                          <li><a href="#">Architecture</a></li>
-                          <li><a href="#">RENOVATION</a></li>
-                          <li><a href="#">CONCRETE SUPPLY</a></li>
+                          <li><a href="service.html">Services</a></li>
+                          <li><a href="#">Projects</a></li>
+                          <li><a href="#">Features</a></li>
+                          <li><a href="#">blog</a></li>
                         </ul>
                         <ul class="ft__menu">
-                          <li><a href="#">ROOFING</a></li>
-                          <li><a href="#">CONSULTING</a></li>
-                          <li><a href="#">EXTERIOR RENOVATION</a></li>
-                          <li><a href="#">PROJECT PLANNING</a></li>
+                          <li><a href="#">Quote</a></li>
+                          <li><a href="#">Projects</a></li>
+                          <li><a href="contact.html">Contact</a></li>
+                          <li><a href="#">Features</a></li>
                         </ul>
                       </div>
                     </div>
                   </div>
+                  <!-- End Single Footer -->
+                  <!-- Start Single Footer -->
+                  <div
+                    class="col-md-3 col-lg-3 col-sm-6 col-xs-12 smt-40 xmt-40"
+                  >
+                    <div class="footer">
+                      <div class="footer__widget">
+                        <h2 class="ft__title">SERVICES</h2>
+                      </div>
+                      <ul class="footer__instagram">
+                        <li>
+                          <a href="#"
+                            ><img src="images/blog/sm-img/1.jpg" alt="images"
+                          /></a>
+                        </li>
+                        <li>
+                          <a href="#"
+                            ><img src="images/blog/sm-img/2.jpg" alt="images"
+                          /></a>
+                        </li>
+                        <li>
+                          <a href="#"
+                            ><img src="images/blog/sm-img/3.jpg" alt="images"
+                          /></a>
+                        </li>
+                        <li>
+                          <a href="#"
+                            ><img src="images/blog/sm-img/4.jpg" alt="images"
+                          /></a>
+                        </li>
+                        <li>
+                          <a href="#"
+                            ><img src="images/blog/sm-img/5.jpg" alt="images"
+                          /></a>
+                        </li>
+                        <li>
+                          <a href="#"
+                            ><img src="images/blog/sm-img/6.jpg" alt="images"
+                          /></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <!-- End Single Footer -->
+                  <!-- Start Single Footer -->
+                  <div
+                    class="col-md-3 col-lg-2 col-lg-offset-1 col-sm-6 col-xs-12 smt-40 xmt-40"
+                  >
+                    <div class="footer">
+                      <div class="footer__widget">
+                        <h2 class="ft__title">INQUARY</h2>
+                        <div class="footer__link">
+                          <ul class="ft__menu">
+                            <li><a href="#">Construction</a></li>
+                            <li><a href="#">Architecture</a></li>
+                            <li><a href="#">RENOVATION</a></li>
+                            <li><a href="#">CONCRETE SUPPLY</a></li>
+                          </ul>
+                          <ul class="ft__menu">
+                            <li><a href="#">ROOFING</a></li>
+                            <li><a href="#">CONSULTING</a></li>
+                            <li><a href="#">EXTERIOR RENOVATION</a></li>
+                            <li><a href="#">PROJECT PLANNING</a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- End Single Footer -->
                 </div>
-                <!-- End Single Footer -->
               </div>
             </div>
           </div>
-        </div>
-        <div class="copyright bg__theme">
-          <div class="container">
-            <div class="row">
-              <div class="col-xs-12">
-                <div class="copyright__inner">
-                  <p>
-                    POWERFUL CONSTRUCTION LLC © 2024, All rights reserved: Made
-                    By
-                    <a href="flexboom.media">FlexBoom Media LLC </a>
-                  </p>
+          <div class="copyright bg__theme">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="copyright__inner">
+                    <p>
+                      POWERFUL CONSTRUCTION LLC © 2024, All rights reserved:
+                      Made By
+                      <a target="_blank" href="http://flexboom.media"
+                        >FlexBoom Media LLC</a
+                      >
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </footer>
+        </footer>
       </div>
       <!-- End Contact Address -->
       <!-- Start Footer Area -->
-  
+
       <!-- End Footer Area -->
     </div>
     <script src="js/vendor/jquery-1.12.0.min.js"></script>
