--- a/Project.html
+++ b/Project.html
@@ -294,7 +294,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/a1.jpg"
                         alt="service images"
@@ -308,7 +308,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/13.jpg"
                         alt="service images"
@@ -322,7 +322,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/14.jpg"
                         alt="service images"
@@ -336,7 +336,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/a4.jpg"
                         alt="service images"
@@ -350,7 +350,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/a5.jpg"
                         alt="service images"
@@ -364,7 +364,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/a6.jpg"
                         alt="service images"
@@ -378,7 +378,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/a7.jpg"
                         alt="service images"
@@ -392,7 +392,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/a8.jpg"
                         alt="service images"
@@ -410,7 +410,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/a9.jpg"
                         alt="service images"
@@ -424,7 +424,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/a10.jpg"
                         alt="service images"
@@ -438,7 +438,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/a11.jpg"
                         alt="service images"
@@ -452,7 +452,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/a12.jpg"
                         alt="service images"
@@ -466,7 +466,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/a16.jpg"
                         alt="service images"
@@ -480,7 +480,7 @@
               <div class="col-md-3">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img
                         src="images/blog/sm-img/19.jpg"
                         alt="service images"
@@ -494,7 +494,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q1.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -506,7 +506,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q41.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -516,7 +516,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q9.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -526,7 +526,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q10.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -535,7 +535,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q47.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -544,7 +544,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q48.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -553,7 +553,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q13.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -562,7 +562,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q14.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -571,7 +571,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q15.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -580,7 +580,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q21.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -589,7 +589,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q17.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -599,7 +599,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q51.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -608,7 +608,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q46.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -617,7 +617,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q47.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -626,7 +626,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q25.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -635,7 +635,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q26.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -644,7 +644,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q27.jpeg" alt="service images" />
                     </a>
                   </div>
@@ -654,7 +654,7 @@
               <div class="col-md-3 hidden-sm col-xs-12">
                 <div class="service foo imgwidth">
                   <div class="service__thumb">
-                    <a href="single-service.html">
+                    <a href="https://powerful-construction.com/Project.html">
                       <img src="images/service/q34.jpeg" alt="service images" />
                     </a>
                   </div>
